# Sentinel

./: .gitignore  README.md
backend/: .env  .env.example  README.md  go.mod  go.sum
backend/auth-service/cmd/server/: main.go
backend/auth-service/internal/handler/: auth_handler.go  health.go
backend/auth-service/internal/models/: user.go
backend/auth-service/internal/repository/: user_repository.go  user_repository_test.go
backend/auth-service/internal/routes/: routes.go
backend/auth-service/internal/service/: auth_service.go  auth_service_test.go  types.go
backend/migrations/: 000001_create_users.up.sql
backend/shared/auth/: jwt.go  middleware.go
backend/shared/config/: config.go
backend/shared/database/: database.go
backend/shared/logger/: logger.go
backend/user-service/: go.mod
backend/user-service/cmd/server/: main.go
backend/user-service/internal/handler/: user_handler.go
backend/user-service/internal/models/: user.go
backend/user-service/internal/repository/: user_repository.go
backend/user-service/internal/routes/: routes.go
backend/user-service/internal/service/: user_service.go
deployments/docker/: docker-compose.yml
gateway/: Cargo.toml
gateway/src/: config.rs  main.rs  models.rs  routes.rs  state.rs
gateway/src/handlers/: auth.rs  health.rs
