[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

reqwest = { version = "0.12", features = ["json"] }

anyhow = "1"
